--- a/modern_portfolio.html
+++ b/modern_portfolio.html
@@ -195,8 +195,8 @@
     <section id="contact" class="section">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:jayvimp@gmail.com">jayvimp@gmail.com</a></p>
-      <p>LinkedIn: <a href="#">linkedin.com/in/yourname</a></p>
-      <p>GitHub: <a href="#">github.com/yourusername</a></p>
+      <p>LinkedIn: <a href="#">linkedin.com/in/jay-vim-parducho</a></p>
+      <p>GitHub: <a href="#">github.com/HadesXjay</a></p>
     </section>
   </div>
 
